[gd_scene load_steps=27 format=2]

[ext_resource path="res://graphics/player/skill_slot.png" type="Texture" id=1]
[ext_resource path="res://graphics/particles/flame/fire.png" type="Texture" id=2]
[ext_resource path="res://graphics/light_.png" type="Texture" id=3]
[ext_resource path="res://graphics/particles/flame/fire_disabled.png" type="Texture" id=4]
[ext_resource path="res://graphics/font/joystix.tres" type="DynamicFont" id=5]
[ext_resource path="res://graphics/particles/heal/heal_disabled.png" type="Texture" id=6]
[ext_resource path="res://graphics/particles/heal/heal.png" type="Texture" id=7]
[ext_resource path="res://graphics/particles/metaeo/metaeo_disabled.png" type="Texture" id=8]
[ext_resource path="res://graphics/particles/metaeo/metaeo.png" type="Texture" id=9]
[ext_resource path="res://graphics/particles/metaeo/light_metaeo_disabled.png" type="Texture" id=10]
[ext_resource path="res://graphics/particles/metaeo/light_metaeo.png" type="Texture" id=11]
[ext_resource path="res://graphics/particles/blingbling/blingbling_disabled.png" type="Texture" id=12]
[ext_resource path="res://graphics/particles/blingbling/blingbling.png" type="Texture" id=13]
[ext_resource path="res://graphics/particles/aura/aura.png" type="Texture" id=14]
[ext_resource path="res://graphics/particles/aura/aura_disabled.png" type="Texture" id=15]
[ext_resource path="res://graphics/font/stardust.tres" type="DynamicFont" id=16]
[ext_resource path="res://graphics/left_line.png" type="Texture" id=17]
[ext_resource path="res://graphics/right_line.png" type="Texture" id=18]
[ext_resource path="res://graphics/straight_line.png" type="Texture" id=19]
[ext_resource path="res://UI/SkillTree.gd" type="Script" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.580392, 0.0862745, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.917647, 0.588235, 0.168627, 1 )
Button/colors/font_color_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 16 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
CheckButton/colors/font_color = Color( 1, 1, 1, 1 )
CheckButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
CheckButton/colors/font_color_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = ExtResource( 16 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 16 )
Label/styles/normal = null
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = ExtResource( 5 )
ProgressBar/styles/bg = SubResource( 4 )
ProgressBar/styles/fg = SubResource( 5 )

[node name="SkillTree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.92549, 0.768627, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLevel" type="Label" parent="."]
margin_left = 912.0
margin_top = 16.0
margin_right = 952.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 16 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsConnector" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2to3" type="HBoxContainer" parent="SkillsConnector"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 200 )
custom_constants/separation = 0

[node name="FrontMargin" type="MarginContainer" parent="SkillsConnector/2to3"]
margin_right = 45.0
margin_bottom = 200.0
rect_min_size = Vector2( 45, 0 )

[node name="2A" type="Control" parent="SkillsConnector/2to3"]
margin_left = 45.0
margin_right = 345.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 2

[node name="3A" type="TextureProgress" parent="SkillsConnector/2to3/2A" groups=[
"SkillConnectors",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 200 )
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 19 )
fill_mode = 3
tint_under = Color( 0.87451, 0.607843, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="SkillsConnector/2to3/2A/3A"]

[node name="1to2" type="HBoxContainer" parent="SkillsConnector"]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 200 )
custom_constants/separation = 0

[node name="FrontMargin" type="MarginContainer" parent="SkillsConnector/1to2"]
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 0 )

[node name="1A" type="Control" parent="SkillsConnector/1to2"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 2

[node name="2A" type="TextureProgress" parent="SkillsConnector/1to2/1A" groups=[
"SkillConnectors",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 200 )
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 17 )
fill_mode = 3
tint_under = Color( 0.87451, 0.607843, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="SkillsConnector/1to2/1A/2A"]

[node name="2B" type="TextureProgress" parent="SkillsConnector/1to2/1A" groups=[
"SkillConnectors",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 200 )
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 18 )
fill_mode = 3
tint_under = Color( 0.87451, 0.607843, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="SkillsConnector/1to2/1A/2B"]

[node name="1B" type="Control" parent="SkillsConnector/1to2"]
margin_left = 450.0
margin_right = 550.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )

[node name="2C" type="TextureProgress" parent="SkillsConnector/1to2/1B" groups=[
"SkillConnectors",
]]
anchor_right = 1.0
anchor_bottom = 1.0
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 19 )
fill_mode = 3
tint_under = Color( 0.87451, 0.607843, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="SkillsConnector/1to2/1B/2C"]

[node name="MarginContainer" type="MarginContainer" parent="SkillsConnector"]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )

[node name="Skilltree" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="HBoxContainer" parent="Skilltree"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 0

[node name="FrontMargin" type="MarginContainer" parent="Skilltree/3"]
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="Skilltree/3"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="3A" type="TextureRect" parent="Skilltree/3" groups=[
"Skills",
]]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/3/3A"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/3/3A/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/3/3A" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "초롱초롱초로롱 너의 눈깔 찔러봐
: 강력한 파괴력과 넓은 범위를 지닌 연사 광역 공격.
사용시 마나를 15 소모하고 범위 내에 있는 적한테 피해를 준다.
필요 레벨 : 15
필요 스킬 포인트 : 8"
disabled = true
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Skilltree"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 100 )

[node name="2" type="HBoxContainer" parent="Skilltree"]
margin_top = 250.0
margin_right = 1024.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 0

[node name="FrontMargin" type="MarginContainer" parent="Skilltree/2"]
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer3" type="MarginContainer" parent="Skilltree/2"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="2A" type="TextureRect" parent="Skilltree/2" groups=[
"Skills",
]]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/2/2A"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/2/2A/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/2/2A" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "메테오
: 파괴력이 강한 단사 공격.
사용시 마나를 6 소모한다. 쿨타임은 8초.
필요 레벨 : 8
필요 스킬 포인트 : 4"
disabled = true
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Skilltree/2"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="2B" type="TextureRect" parent="Skilltree/2" groups=[
"Skills",
]]
margin_left = 350.0
margin_right = 450.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/2/2B"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/2/2B/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/2/2B" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "불벼락
: 주변을 초토화시킬 수 있는 광역 공격.
사용시 마나를 5 소모하고 범위 안에 위치한 적에게 피해를 입힌다. 쿨타임은 6초.
필요 레벨 : 5
필요 스킬 포인트 : 3"
disabled = true
texture_normal = ExtResource( 11 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="Skilltree/2"]
margin_left = 450.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="2C" type="TextureRect" parent="Skilltree/2" groups=[
"Skills",
]]
margin_left = 550.0
margin_right = 650.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/2/2C"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/2/2C/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/2/2C" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "치유의 보호벽
: 2단계 치유 스킬. 사용시 마나를 8 소모하고 플레이어의 체력을 6 회복한다. 쿨타임 1.5초
필요 레벨 : 5
필요 스킬 포인트 : 4"
disabled = true
texture_normal = ExtResource( 14 )
texture_disabled = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Skilltree"]
margin_top = 350.0
margin_right = 1024.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 100 )

[node name="1" type="HBoxContainer" parent="Skilltree"]
margin_top = 450.0
margin_right = 1024.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 0

[node name="SkillPoint" type="Label" parent="Skilltree/1"]
margin_top = 16.0
margin_right = 150.0
margin_bottom = 83.0
rect_min_size = Vector2( 150, 0 )
text = "3
Points"
align = 1
valign = 1

[node name="MarginContainer5" type="MarginContainer" parent="Skilltree/1"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="1A" type="TextureRect" parent="Skilltree/1" groups=[
"Skills",
]]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/1/1A"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/1/1A/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/1/1A" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "파이어
: 가장 기본적인 연사 공격.
사용시 마나를 2 소모한다.
필요 레벨 : 1
"
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="Skilltree/1"]
margin_left = 350.0
margin_right = 450.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="MarginContainer7" type="MarginContainer" parent="Skilltree/1"]
margin_left = 450.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="1B" type="TextureRect" parent="Skilltree/1" groups=[
"Skills",
]]
margin_left = 550.0
margin_right = 650.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Skilltree/1/1B"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Skilltree/1/1B/TextureRect"]

[node name="TextureButton" type="TextureButton" parent="Skilltree/1/1B" groups=[
"SkillButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 90 )
hint_tooltip = "힐링
: 가장 기본적인 치유 스킬.
사용시 마나를 3 소모하고 플레이어의 체력을 3 회복한다.
필요 레벨 : 1"
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Skilltree"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 50 )
